--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,8 @@
   h1 {
     @apply text-4xl font-bold tracking-tight md:text-5xl lg:text-6xl;
   }
-  h1, h2 {
+  h1,
+  h2 {
     @apply text-3xl font-bold tracking-tight md:text-4xl lg:text-5xl;
   }
   h3 {
